[package]
name = "dsupdate"
version = "0.1.0"
edition = "2021"
authors = ["Jujumba"]

# Yes. Bloated.
[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sudo = "0.6.0"

[profile.release]
lto = true
strip = "symbols"
